# api-validator

./: .gitignore  ASSIGNMENT_COMPLIANCE.md  CI_TRIGGER_TEST.md  CLAUDE.md  CLAUDE_LOG.md  README.md  conftest.py  edgeCase-without-ai-grounding-rule.txt  edgeCases-with-ai-grounding-rule.txt  index.html  notes.md  pyproject.toml  requirements.txt
.claude/commands/: generate-tests.md  pa-add-api.md  pa-generate-tests.md  pa-run-tests.md  run-tests.md
.claude/rules/: ai-grounding.md  code-style.md  framework-rules.md  testing-standards.md
.claude/skills/: test-generator.md  validator-generator.md
.github/workflows/: ci.yml
config/: environments.yaml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 10195ddbbd1a6de5.json  103efe8cd9f7d921.json  109ad11a91b910d1.json  119112f895f163d4.json  11b6a51d8a09ce97.json  123a8a01e9d13a82.json  12dc6d95cd2043d8.json  135d3707d6d27173.json  13af0ce96fb2960f.json  14d3c51e70f629d6.json  152927e1c77de2ea.json  166aa0ffd9686b63.json  (+436 more)
docs/: dsl-spec.md  openapi-onboarding-plan.md
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
scripts/: ci_summary.py
src/: client.py  config_loader.py  runner.py
test_data/: cities.json  pokemon.json
test_specs/: countries.yaml  weather.yaml
tests/: test_spec_runner.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  summary.json
(+332 files in other folders)
